# snipcontext

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  PONYTAIL-AUDIT.md  README.md  SECURITY.md  SPEC.md  Snipcontext Demo Command Implementation - DeepSeek.html  TESTING.md  pr_body.md  pypi_secret.txt  pyproject.toml  snipcontext.spec
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_improvement.md  feature_request.md  provider_request.md
.github/workflows/: benchmarks.yml  build-binaries.yml  ci.yml  project-automation.yml  publish.yml  release.yml  reusable-quality.yml
Kimi_Agent_Elite Engineer Build Guide/snipcontext/: pyproject.toml
Kimi_Agent_Elite Engineer Build Guide/snipcontext/docs/: ARCHITECTURE.md
Kimi_Agent_Elite Engineer Build Guide/snipcontext/snipcontext/cli/: main.py
Kimi_Agent_Elite Engineer Build Guide/snipcontext/snipcontext/config/: __init__.py  settings.py
Kimi_Agent_Elite Engineer Build Guide/snipcontext/snipcontext/core/: storage.py
Kimi_Agent_Elite Engineer Build Guide/snipcontext/snipcontext/providers/: openai.py
Kimi_Agent_Elite Engineer Build Guide/snipcontext/tests/: test_providers.py
Snipcontext Demo Command Implementation - DeepSeek_files/: AN_FnKMlDPyXOaxB_QoYjDHE  default-vendors.bca4876a42.js.download  main.876fbaccb8.js.download  main.ff1e6216a7.css
audit/: baseline-audit-summary.md  baseline_audit.py  behavior-gaps.json  coverage-matrix.csv  signature-gaps.json
config/: .env.example  README.md
core/: README.md
docs/: API.md  ARCHITECTURE.md  Curating_local_code_context_for_AI_agents.m4a  DEVEX.md  MAINTAINER.md  REPOSITORY_SETUP.md  REPOSITORY_STANDARDS.md  benchmark.md  configuration.md  developer-setup.md  migrate.md  performance.md  plugin-examples.md  plugin-testing.md  plugins.md  providers.md  report.txt  search.md  security.md
docs/examples/: MODULAR_REFERENCE.md
plugins/: README.md
providers/: README.md
scripts/: bootstrap.sh  hygiene.sh  release.ps1  setup.py  snipcontext  snipcontext.cmd  validate.sh
snipcontext/: __init__.py
snipcontext/cli/: __init__.py  main.py
snipcontext/core/: models.py  search.py
snipcontext/plugins/: __init__.py  base.py
snipcontext/providers/: claude.py  generic.py  openai.py
snipcontext/snipcontext/: __main__.py
snipcontext/snipcontext/core/: __init__.py  models.py  search.py
snipcontext/snipcontext/providers/: base.py
snipcontext/tests/: test_models.py  test_search.py  test_storage.py
src/snipcontext/: __init__.py  __main__.py
src/snipcontext/cli/: __init__.py  agent.py  app.py  benchmark.py  config.py  context.py  crypto.py  export.py  history.py  info.py  init.py  main.py  search.py  snippets.py  stats.py  watch.py
src/snipcontext/config/: __init__.py  paths.py  settings.py
src/snipcontext/core/: __init__.py  analytics.py  auto_tag.py  config_ops.py  crypto_ops.py  index_backends.py  models.py  sanitization.py  search.py  search_history.py  search_ops.py  snippet_ops.py  storage.py  watch_ops.py  watcher.py
src/snipcontext/plugins/: __init__.py  base.py  registry.py
src/snipcontext/providers/: __init__.py  base.py  claude.py  cursor.py  generic.py  openai.py
src/snipcontext/tui/: __init__.py  app.py  commands.py  completer.py  formatter.py  textual_app.py
src/snipcontext/web/: __init__.py  agent_card.py  app.py  dependencies.py  schemas.py
src/snipcontext/web/routers/: agent.py  health.py  snippets.py
tests/: README.md  conftest.py  test_analytics.py  test_autotag.py  test_cli.py  test_config.py  test_dedup.py  test_incremental_index.py  test_integration_baseline.py  test_models.py  test_plugin_system.py  test_provider_interface.py  test_providers.py  test_registry.py  test_search.py  test_search_history.py  test_search_ops.py  test_snippet_ops.py  test_storage.py  test_watcher.py
tests/cli/: test_benchmark.py  test_cli_snapshots.py  test_config.py  test_e2e.py  test_history.py
tests/cli/snapshots/test_cli_snapshots/test_sc_export_claude/: test_sc_export_claude
tests/cli/snapshots/test_cli_snapshots/test_sc_export_generic/: test_sc_export_generic
tests/cli/snapshots/test_cli_snapshots/test_sc_export_openai/: test_sc_export_openai
tests/cli/snapshots/test_cli_snapshots/test_sc_list_empty/: test_sc_list_empty
tests/cli/snapshots/test_cli_snapshots/test_sc_list_special_chars/: test_sc_list_special_chars
tests/cli/snapshots/test_cli_snapshots/test_sc_list_unicode/: test_sc_list_unicode
tests/cli/snapshots/test_cli_snapshots/test_sc_list_with_snippets/: test_sc_list_with_snippets
tests/cli/snapshots/test_cli_snapshots/test_sc_stats/: test_sc_stats
tests/core/: test_hybrid_search.py  test_index_backends.py  test_plugin_loading.py  test_search_coverage.py
tests/integration/: test_matrix.py
tests/property/: test_hybrid_properties.py  test_provider_schema.py
tests/providers/: test_format_roundtrip.py
tests/providers/snapshots/test_format_roundtrip/test_batch_snapshot_matches_expected/ClaudeProvider/: claude
tests/providers/snapshots/test_format_roundtrip/test_batch_snapshot_matches_expected/CursorProvider/: cursor
tests/providers/snapshots/test_format_roundtrip/test_batch_snapshot_matches_expected/GenericProvider/: generic
tests/providers/snapshots/test_format_roundtrip/test_batch_snapshot_matches_expected/OpenAIProvider/: openai
tests/providers/snapshots/test_format_roundtrip/test_empty_batch_snapshot_is_stable/ClaudeProvider/: claude-empty
tests/providers/snapshots/test_format_roundtrip/test_empty_batch_snapshot_is_stable/CursorProvider/: cursor-empty
tests/providers/snapshots/test_format_roundtrip/test_empty_batch_snapshot_is_stable/GenericProvider/: generic-empty
tests/providers/snapshots/test_format_roundtrip/test_empty_batch_snapshot_is_stable/OpenAIProvider/: openai-empty
tests/tui/: test_app.py  test_commands.py
tests/web/: conftest.py  test_agent_card.py
tests/web/test_routers/: test_health.py  test_snippets.py
(+8 files in other folders)
