[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snipcontext"
dynamic = ["version"]
description = "AI-powered code snippet & context manager with local semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SnipContext Contributors" },
]
keywords = [
    "snippet",
    "code",
    "context",
    "llm",
    "ai",
    "semantic-search",
    "embeddings",
    "developer-tools",
    "productivity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typer[all]>=0.12.0",
    "rich>=13.0,<16.0",
    "platformdirs>=4.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "watchdog>=4.0,<5.0",
    "numpy>=1.24.0,<3.0",
    "rank-bm25>=0.2.2,<1.0",
    "packaging>=24.0",
]
[project.optional-dependencies]
# Core semantic search (requires Rust toolchain for pydantic-core + sentence-transformers)
semantic = [
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8.0",
]
# Encryption support (requires Rust toolchain for cryptography)
encryption = [
    "cryptography>=42.0,<44.0",
]
# TUI interactive shell
tui = [
    "prompt-toolkit>=3.0.43,<4.0",
]
# Web API server
web = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "httpx>=0.27.0,<1.0",
]
# All optional features
all = [
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8.0",
    "cryptography>=42.0,<44.0",
    "prompt-toolkit>=3.0.43,<4.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "httpx>=0.27.0,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-snapshot>=0.9.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.141.1",
    "ruff>=0.5.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
]
[project.scripts]
snipcontext = "snipcontext.cli.app:app"
sc = "snipcontext.cli.app:app"
[project.entry-points."snipcontext.plugins"]
# Built-in plugins register here
[project.entry-points."snipcontext.providers"]
claude = "snipcontext.providers.claude:ClaudeProvider"
cursor = "snipcontext.providers.cursor:CursorProvider"
openai = "snipcontext.providers.openai:OpenAIProvider"
generic = "snipcontext.providers.generic:GenericProvider"
[project.urls]
Homepage = "https://github.com/billybox1926-jpg/snipcontext"
Documentation = "https://github.com/billybox1926-jpg/snipcontext/blob/main/docs"
Repository = "https://github.com/billybox1926-jpg/snipcontext"
Issues = "https://github.com/billybox1926-jpg/snipcontext/issues"
Changelog = "https://github.com/billybox1926-jpg/snipcontext/blob/main/CHANGELOG.md"
[tool.hatch.version]
path = "src/snipcontext/__init__.py"
[tool.hatch.build.targets.sdist]
include = [
    "/src/snipcontext",
    "/tests",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
]
[tool.hatch.build.targets.wheel]
packages = ["src/snipcontext"]
artifacts = ["scripts/snipcontext.cmd"]
[tool.hatch.build]
exclude = [
    "/tests",
    "/.github",
    "/.gitignore",
]
[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "D",   # pydocstyle
]
ignore = ["E501", "D100", "D104", "D101", "D102", "D103", "D107", "D202", "B008", "B904"]
[tool.ruff.format]
quote-style = "double"
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
    "no-untyped-def",
    "misc",
    "no-any-return",
    "type-arg",
    "no-untyped-call",
]
[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "snipcontext.*"
ignore_missing_imports = true
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
[tool.coverage.run]
source = ["snipcontext"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 63  # Calibrated to CI "minimal install" floor; raise after expanding test matrix
